# abailly.github.io

./: .gitignore  .gitmodules  README.md  Slides.hs  about.html  atom.xml  build.hs  cabal.project  index.html  life-beyond-relational-db.html  real-real-world-haskell.html  site.cabal  site.hs  stack.yaml
cours/: cours1.html  cours2.html  cours3.html  cours5.html  cours6.html  exploratory.html  index.html  irpp.html  references.html
css/: cours.css  default.css  style.css  syntax.css
cv/: cv-arnaud-fr.tex  cv-arnaud.tex  cv.tex
drafts/: acquire.html  acquire.md  agile-startup.html  agile-startup.md  architecture.html  architecture.md  cm-arch-design.html  cm-arch-design.md  cm-infra-2.html  cm-infra-2.md  cm-infra.html  cm-infra.md  codemesh2017.html  common-dev-environment.html  common-dev-environment.md  dependent-types-ddd.html  eff-no-more.html  eff-no-more.md  effects.html  enrichissement.html  enrichissement.md  etudes-tchouang-tseu.html  etudes-tchouang-tseu.md  event-source.html  event-source.md  existence-software.html  existence-software.md  existential-types.html  fifty-years-programmer.html  fifty-years-programmer.md  geek-camp-2021.html  geek-camp-2021.md  growing-up.html  haskell-reliability.html  haskell-types.html  haskell-types.md  histoire-des-inegalites.md  howto-private-repo-radicle.html  intersectionality.html  intersectionality.md  (+44 more)
images/: Untitled-2021-09-02-1507.excalidraw  event-storming.idraw  mirage  mirage-principle.idraw  mithril-decentralised.excalidraw  nir.excalidraw  pattern-language-example.png.sb-c4a1ad48-fqpmjW  roles.dot  (+8 more)
(+291 files in other folders)
