name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base < 5
                  , time
                  , containers
                  , filepath
                  , hakyll
  ghc-options:      -threaded
  default-language: Haskell2010
